compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__bytes.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 159
expression: "\nfn go(x) {\n  <<x:bytes>>\n}\n"
---
import { toBitString } from "../gleam.mjs";

function go(x) {
  return toBitString([x.buffer]);
}

