compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__case_discard_sized.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  case x {\n    <<_:16, _:8>> -> 1\n    _ -> 2\n  }\n  case x {\n    <<_:16-little-signed, _:8>> -> 1\n    _ -> 2\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<_:16, _:8>> -> 1
    _ -> 2
  }
  case x {
    <<_:16-little-signed, _:8>> -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  if (x.bitSize >= 16 && x.bitSize === 24) {
    1;
  } else {
    2;
  }
  if (x.bitSize >= 16 && x.bitSize === 24) {
    return 1;
  } else {
    return 2;
  }
}
