compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__case_dynamic_size_float_pattern_with_unit.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 1845
expression: "\npub fn go(x) {\n  let size = 3\n  case x {\n    <<1.3:size(size)-unit(2)>> -> 1\n    _ -> 2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let size = 3
  case x {
    <<1.3:size(size)-unit(2)>> -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToFloat } from "../gleam.mjs";

export function go(x) {
  let size = 3;
  if (size >= 0) {
    if (x.bitSize === size * 2) {
      if (bitArraySliceToFloat(x, 0, size * 2, true) === 1.3) {
        return 1;
      } else {
        return 2;
      }
    } else {
      return 2;
    }
  } else {
    return 2;
  }
}
