compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__case_dynamic_size_pattern_with_unit.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 1830
expression: "\npub fn go(x) {\n  let size = 3\n  case x {\n    <<1:size(size)-unit(2)>> -> 1\n    _ -> 2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let size = 3
  case x {
    <<1:size(size)-unit(2)>> -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToInt } from "../gleam.mjs";

export function go(x) {
  let size = 3;
  if (size >= 0) {
    if (x.bitSize === size * 2) {
      if (bitArraySliceToInt(x, 0, size * 2, true, false) === 1) {
        return 1;
      } else {
        return 2;
      }
    } else {
      return 2;
    }
  } else {
    return 2;
  }
}
